# threadline

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.cursor/rules/: overlay-restart.mdc
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: README.md  agent-platform-wedge.md  agentic-versioning-ledger.md  product-wow-ideas.md  threadline-design-system.md  threadline-v1-direction.md
overlay/: Package.swift  README.md  install.sh
overlay/Sources/threadline-overlay/: AppDelegate.swift  CLI.swift  ClaudeSource.swift  CodexSource.swift  ContentView.swift  CursorAgentSource.swift  CursorSource.swift  Daemon.swift  DaemonLock.swift  DiffDisplay.swift  FileConflict.swift  FileIO.swift  ForegroundProcess.swift  Git.swift  HistorySource.swift  HotKey.swift  IPC.swift  InboxRow.swift  JSONLAccess.swift  JumpBack.swift  LaunchAgent.swift  LiveAgents.swift  LocalLLM.swift  Panel.swift  Pricing.swift  ProcTable.swift  SessionDomain.swift  SessionGrouper.swift  SessionLogWatcher.swift  SessionModel.swift  SessionSegment.swift  SessionSnapshotBuilder.swift  SessionStateStore.swift  (+17 more)
overlay/scripts/: e2e-live.sh  e2e-simulated-codex.sh
scripts/: dump_session.py
src/threadline/: cache.py  cli.py  collect.py  diff.py  history.py  session.py  summarize.py  tail.py
tests/xray/: test_claude_adapter.py  test_cli_render.py  test_codex_adapter.py  test_evidence.py  test_framing.py  test_html_report.py  test_json_report.py  test_mapper.py
(+27 files in other folders)
